--- a/src/app/calculator/components/calculator/calculator.component.html
+++ b/src/app/calculator/components/calculator/calculator.component.html
@@ -1,151 +1,39 @@
-  <div
-    class="w-screen h-40 bg-gradient-to-b from-gray-800 to-gray-700 flex items-end text-right"
-    style="max-width: 300px;"
-  >
-    <div class="w-full py-5 px-6 text-6xl text-white font-thin">340.0</div>
+<div
+  class="w-screen h-40 bg-gradient-to-b from-gray-800 to-gray-700 flex items-end text-right"
+  style="max-width: 300px"
+>
+  <div class="w-full py-5 px-6 text-6xl text-white font-thin">340.0</div>
+</div>
+<div class="w-full bg-gradient-to-b from-indigo-400 to-indigo-500">
+  <div class="flex w-full">
+    <button-calculator>C</button-calculator>
+    <button-calculator>+/-</button-calculator>
+    <button-calculator>%</button-calculator>
+    <button-calculator [isCommand]="true">÷</button-calculator>
   </div>
-  <div class="w-full bg-gradient-to-b from-indigo-400 to-indigo-500">
-    <div class="flex w-full">
-      <div class="w-1/4 border-r border-b border-indigo-400">
-        <button
-          class="w-full h-16 outline-none focus:outline-none hover:bg-indigo-700 hover:bg-opacity-20 text-white text-opacity-50 text-xl font-light"
-        >
-          C
-        </button>
-      </div>
-      <div class="w-1/4 border-r border-b border-indigo-400">
-        <button
-          class="w-full h-16 outline-none focus:outline-none hover:bg-indigo-700 hover:bg-opacity-20 text-white text-opacity-50 text-xl font-light"
-        >
-          +/-
-        </button>
-      </div>
-      <div class="w-1/4 border-r border-b border-indigo-400">
-        <button
-          class="w-full h-16 outline-none focus:outline-none hover:bg-indigo-700 hover:bg-opacity-20 text-white text-opacity-50 text-xl font-light"
-        >
-          %
-        </button>
-      </div>
-      <div class="w-1/4 border-r border-b border-indigo-400">
-        <button
-          class="w-full h-16 outline-none focus:outline-none bg-indigo-700 bg-opacity-10 hover:bg-opacity-20 text-white text-2xl font-light"
-        >
-          ÷
-        </button>
-      </div>
-    </div>
-    <div class="flex w-full">
-      <div class="w-1/4 border-r border-b border-indigo-400">
-        <button
-          class="w-full h-16 outline-none focus:outline-none hover:bg-indigo-700 hover:bg-opacity-20 text-white text-xl font-light"
-        >
-          7
-        </button>
-      </div>
-      <div class="w-1/4 border-r border-b border-indigo-400">
-        <button
-          class="w-full h-16 outline-none focus:outline-none hover:bg-indigo-700 hover:bg-opacity-20 text-white text-xl font-light"
-        >
-          8
-        </button>
-      </div>
-      <div class="w-1/4 border-r border-b border-indigo-400">
-        <button
-          class="w-full h-16 outline-none focus:outline-none hover:bg-indigo-700 hover:bg-opacity-20 text-white text-xl font-light"
-        >
-          9
-        </button>
-      </div>
-      <div class="w-1/4 border-r border-b border-indigo-400">
-        <button
-          class="w-full h-16 outline-none focus:outline-none bg-indigo-700 bg-opacity-10 hover:bg-opacity-20 text-white text-xl font-light"
-        >
-          ⨉
-        </button>
-      </div>
-    </div>
-    <div class="flex w-full">
-      <div class="w-1/4 border-r border-b border-indigo-400">
-        <button
-          class="w-full h-16 outline-none focus:outline-none hover:bg-indigo-700 hover:bg-opacity-20 text-white text-xl font-light"
-        >
-          4
-        </button>
-      </div>
-      <div class="w-1/4 border-r border-b border-indigo-400">
-        <button
-          class="w-full h-16 outline-none focus:outline-none hover:bg-indigo-700 hover:bg-opacity-20 text-white text-xl font-light"
-        >
-          5
-        </button>
-      </div>
-      <div class="w-1/4 border-r border-b border-indigo-400">
-        <button
-          class="w-full h-16 outline-none focus:outline-none hover:bg-indigo-700 hover:bg-opacity-20 text-white text-xl font-light"
-        >
-          6
-        </button>
-      </div>
-      <div class="w-1/4 border-r border-b border-indigo-400">
-        <button
-          class="w-full h-16 outline-none focus:outline-none bg-indigo-700 bg-opacity-10 hover:bg-opacity-20 text-white text-xl font-light"
-        >
-          -
-        </button>
-      </div>
-    </div>
-    <div class="flex w-full">
-      <div class="w-1/4 border-r border-b border-indigo-400">
-        <button
-          class="w-full h-16 outline-none focus:outline-none hover:bg-indigo-700 hover:bg-opacity-20 text-white text-xl font-light"
-        >
-          1
-        </button>
-      </div>
-      <div class="w-1/4 border-r border-b border-indigo-400">
-        <button
-          class="w-full h-16 outline-none focus:outline-none hover:bg-indigo-700 hover:bg-opacity-20 text-white text-xl font-light"
-        >
-          2
-        </button>
-      </div>
-      <div class="w-1/4 border-r border-b border-indigo-400">
-        <button
-          class="w-full h-16 outline-none focus:outline-none hover:bg-indigo-700 hover:bg-opacity-20 text-white text-xl font-light"
-        >
-          3
-        </button>
-      </div>
-      <div class="w-1/4 border-r border-b border-indigo-400">
-        <button
-          class="w-full h-16 outline-none focus:outline-none bg-indigo-700 bg-opacity-10 hover:bg-opacity-20 text-white text-xl font-light"
-        >
-          +
-        </button>
-      </div>
-    </div>
-    <div class="flex w-full">
-      <div class="w-1/4 border-r border-indigo-400">
-        <button
-          class="w-full h-16 outline-none focus:outline-none hover:bg-indigo-700 hover:bg-opacity-20 text-white text-xl font-light"
-        >
-          0
-        </button>
-      </div>
-      <div class="w-1/4 border-r border-indigo-400">
-        <button
-          class="w-full h-16 outline-none focus:outline-none hover:bg-indigo-700 hover:bg-opacity-20 text-white text-xl font-light"
-        >
-          .
-        </button>
-      </div>
-      <div class="w-2/4 border-r border-indigo-400">
-        <button
-          class="w-full h-16 outline-none focus:outline-none bg-indigo-700 bg-opacity-30 hover:bg-opacity-40 text-white text-xl font-light"
-        >
-          =
-        </button>
-      </div>
-    </div>
+  <div class="flex w-full">
+    <button-calculator>7</button-calculator>
+    <button-calculator>8</button-calculator>
+    <button-calculator>9</button-calculator>
+    <button-calculator [isCommand]="true">x</button-calculator>
   </div>
+  <div class="flex w-full">
+    <button-calculator>4</button-calculator>
+    <button-calculator>5</button-calculator>
+    <button-calculator>6</button-calculator>
+    <button-calculator [isCommand]="true">-</button-calculator>
+  </div>
+  <div class="flex w-full">
+    <button-calculator>1</button-calculator>
+    <button-calculator>2</button-calculator>
+    <button-calculator>3</button-calculator>
+    <button-calculator [isCommand]="true">+</button-calculator>
+  </div>
+  <div class="flex w-full">
+    <button-calculator>0</button-calculator>
+    <button-calculator>.</button-calculator>
+    <button-calculator [isCommand]="true" [isDoubleSize]="true"
+      >=</button-calculator
+    >
+  </div>
+</div>
