feat: creación de funcionalidad de keyup y click

--- a/src/app/calculator/components/button/button.component.html
+++ b/src/app/calculator/components/button/button.component.html
@@ -1,3 +1,9 @@
-<button [class.is-command]="isCommand()" [class.is-double-size]="isDoubleSize()">
+<button
+  #button
+  (click)="handleClick()"
+  [class.is-pressed]="isPressed()"
+  [class.is-command]="isCommand()"
+  [class.is-double-size]="isDoubleSize()"
+>
   <ng-content />
 </button>
