--- a/src/app/calculator/components/calculator/calculator.component.html
+++ b/src/app/calculator/components/calculator/calculator.component.html
@@ -1,19 +1,18 @@
-<div
-  class="w-screen h-40 bg-gradient-to-b from-gray-800 to-gray-700 flex items-end text-right"
-  style="max-width: 300px"
->
+<div class="w-screen h-40 bg-gradient-to-b from-gray-800 to-gray-700 flex items-end text-right" style="max-width: 300px">
   <div class="w-full py-5 px-6 text-6xl text-white font-thin">
-    <span class="text-4xl">50 +</span>
-    <br />
-    <span>340.0</span>
+    @if (subResultText() !== '0') {
+      <span class="text-4xl">{{ subResultText() }} {{ lastOperator() }}</span>
+      <br />
+    }
+    <span>{{ resultText() }}</span>
   </div>
 </div>
 <div class="w-full bg-gradient-to-b from-indigo-400 to-indigo-500">
   <div class="flex w-full">
     <button-calculator (onClick)="handleClick($event)">C</button-calculator>
     <button-calculator (onClick)="handleClick($event)">+/-</button-calculator>
-    <button-calculator (onClick)="handleClick($event)">%</button-calculator>
-    <button-calculator (onClick)="handleClick($event)" [isCommand]="true">÷</button-calculator>
+    <button-calculator (onClick)="handleClick($event)">/</button-calculator>
+    <button-calculator (onClick)="handleClick($event)" [isCommand]="true">%</button-calculator>
   </div>
   <div class="flex w-full">
     <button-calculator (onClick)="handleClick($event)">7</button-calculator>
